

  27 Jul 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.15.6.ebuild:
  Bump to latest aufs3

  21 Jul 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.15.6.ebuild:
  Bump to latest aufs3 release

*lh-sources-3.15.6 (18 Jul 2014)

  18 Jul 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.15.6.ebuild:
  Bump to latest aufs3, genpatches and linux release

  14 Jul 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.15.5.ebuild:
  Bump to latest aufs3 release

*lh-sources-3.15.5 (10 Jul 2014)

  10 Jul 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.15.5.ebuild:
  Bump to latest aufs3, genpatches and linux release

  06 Jul 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.15.3.ebuild:
  Bump to latest aufs3

  02 Jul 2014; Justin Lecher <jlec@gentoo.org> -lh-sources-3.14.6.ebuild,
  -lh-sources-3.14.7.ebuild, -lh-sources-3.15.0.ebuild,
  -lh-sources-3.15.1.ebuild, -lh-sources-3.15.2.ebuild,
  +lh-sources-3.15.3.ebuild, -files/lh-sources-3.14-armv6.patch,
  -files/README.gentoo:
  Bump to latest aufs3, genpatches and linux release

  27 Jun 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.15.2.ebuild,
  +files/README.gentoo-r1:
  Bump to latest aufs3, genpatches and linux release

*lh-sources-3.15.2 (27 Jun 2014)

  27 Jun 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.15.2.ebuild,
  +files/README.gentoo-r1:
  Bump to latest aufs3, genpatches and linux release

  23 Jun 2014; Justin Lecher <jlec@gentoo.org> Manifest:
  Fix checksums

  20 Jun 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.15.1.ebuild:
  Add latest BFQ patch

*lh-sources-3.15.1 (19 Jun 2014)

  19 Jun 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.15.1.ebuild:
  Bump to latest aufs3, genpatches and linux release

  15 Jun 2014; Justin Lecher <jlec@gentoo.org> files/README.gentoo:
  Fix README file

  15 Jun 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.15.0.ebuild,
  -files/lh-sources-3.9-armv6.patch, -files/lh-sources-3.10-armv6.patch,