@@ -4,6 +4,7 @@ DIST 0003-block-bfq-add-Early-Queue-Merge-EQM-to-BFQ-v7r5-for-3.15.0.patch1 4049
 DIST README-3.15.3.BFQ 20481 SHA256 c12799344770d3834a8bff7f957e4ef432d819980d32359c04b4c87a662c855b SHA512 ca5bf1b4fbd61a9733e8d6f12f7740d34117e72aed29558368dd8922ade66651a313fefa19855d7d157d115cd14d1d7a84d4161d20f6447da48ea60140c0938b WHIRLPOOL b9db6e465c5648714a3730f5c83169908482e454fcdb597a943fdd64d823780b7c35625d023adfb478c9fb53970f9e1773cf38bd33b9fd2ba073b12e4e6ec915
 DIST README-3.15.5.BFQ 20481 SHA256 c12799344770d3834a8bff7f957e4ef432d819980d32359c04b4c87a662c855b SHA512 ca5bf1b4fbd61a9733e8d6f12f7740d34117e72aed29558368dd8922ade66651a313fefa19855d7d157d115cd14d1d7a84d4161d20f6447da48ea60140c0938b WHIRLPOOL b9db6e465c5648714a3730f5c83169908482e454fcdb597a943fdd64d823780b7c35625d023adfb478c9fb53970f9e1773cf38bd33b9fd2ba073b12e4e6ec915
 DIST README-3.15.6.BFQ 20481 SHA256 c12799344770d3834a8bff7f957e4ef432d819980d32359c04b4c87a662c855b SHA512 ca5bf1b4fbd61a9733e8d6f12f7740d34117e72aed29558368dd8922ade66651a313fefa19855d7d157d115cd14d1d7a84d4161d20f6447da48ea60140c0938b WHIRLPOOL b9db6e465c5648714a3730f5c83169908482e454fcdb597a943fdd64d823780b7c35625d023adfb478c9fb53970f9e1773cf38bd33b9fd2ba073b12e4e6ec915
+DIST README-v7r5-0.BFQ 20481 SHA256 c12799344770d3834a8bff7f957e4ef432d819980d32359c04b4c87a662c855b SHA512 ca5bf1b4fbd61a9733e8d6f12f7740d34117e72aed29558368dd8922ade66651a313fefa19855d7d157d115cd14d1d7a84d4161d20f6447da48ea60140c0938b WHIRLPOOL b9db6e465c5648714a3730f5c83169908482e454fcdb597a943fdd64d823780b7c35625d023adfb478c9fb53970f9e1773cf38bd33b9fd2ba073b12e4e6ec915
 DIST aufs-sources-3.15_p20140707.tar.xz 154664 SHA256 a439d75a9bd948764baf939be1325eb21af4fa8e1d0f11ce6f372771d6b7252b SHA512 f173c85e2be05014b71ccfe73566b1fd497193578fac98bf2dc270de1b29db8676a2112492cfa70ba92de9685f55da7d63e1f826c899c4c3f23ec357a1e7071f WHIRLPOOL 0f6d9d614e87834d1659f8c58918654a665751fcbcd19f64546d973d1c4449de337e5c416a455167a7e0019fd8ead5266a41e08c42971c25535f917d0aaedd28
 DIST aufs-sources-3.15_p20140714.tar.xz 155048 SHA256 1e35223d982cca5a61e5248b160b388d03f44bc3dd8fa33c3549cfe3cb617ca2 SHA512 3ada4a3a9fd8b58e27dbdc18e4cad8fc2b184ca47ff4e9bdbaaf76ea5d982848b052c39fd7c892667b955770c936fda8ba536881a8bcaf3475a0074fc4c76305 WHIRLPOOL 8149886a3d4ce600a691bd9897d8b6d25f6ea7d2212d139a7d6170da870a1195802c9ab7dd1520ade4f67f582f4f53f075eb1d7f5f7b18d07a31b2a88e307263
 DIST aufs-sources-3.15_p20140728.tar.xz 159784 SHA256 6c14f595eab904e391aad8e968050631ead4c0eafd43e100e3685f658fa32695 SHA512 2f55f40f4e89745e7f1e1754349af05cd4147b6ed3264265ca43a6677752f7a40dfff4f97f5c1b8ff308423b81db1210dccb3e6ec6cba72551d9d38712595161 WHIRLPOOL ac92a72f4dfe763493fed80dbd925790249cbeba32876da28765f913c8c706d173edfb06f8b647eabb5a7921a0b62e61b2fac522593a8afd1a791f83aa867caf
@@ -15,6 +16,8 @@ DIST genpatches-3.15-7.base.tar.xz 129444 SHA256 ac36954acce2fe6065ede5f82bf9d55
 DIST genpatches-3.15-7.extras.tar.xz 17668 SHA256 3c505f00c51b593b26d613d9d02ac99664b206dc87670e1ec01d666c714ace6c SHA512 e1ec4f7a37d619ea087773d44bbab9cbfbebe4dde5dca0a718b51c7d9c00a584172fbbd05d2f1dadcf637474be034d66e96c41d28e80537dc36fac9f01f2cdbd WHIRLPOOL c978ac63c0993be52b9d48b47123b297628722be95c8b18e60931cf42e0de944fd5524eb945c3577acbc0f0eb37b98b56a3d1ba6759e4536a9a948d58ac70f49
 DIST genpatches-3.15-8.base.tar.xz 152608 SHA256 22a03917ed9bf8ae9eaa59e2f3bd8d0d892ff0a4dfebaf53d6be2c923889e946 SHA512 9495805021c2f269466f88c0c78d55878302eb8b2c477eb8d811b1ecb46f9f268b55edbd74d7bac15224eb7aec08d1fb7021e927bbf1e0b8ed06ce729e5ce3dc WHIRLPOOL e6e37b77879017424fa424125815144cd0407d04df756923bba5a3e75a79e482b917e17e73c1675d547f30fb6d5492599216216e5eff0e329fb8368e932e484d
 DIST genpatches-3.15-8.extras.tar.xz 17664 SHA256 b863dc86435c2d51a09451fdf433fbb9e3c2923b260cfe6abbfb399e48103bdc SHA512 4ce0312a21febc39eab52d1e755f99a5667eb0c16f276b14971d74a8a9c017d71960ff348b0be5c4e0e3d6074876db61b5bf756f413b1b369d7d1589160f3546 WHIRLPOOL fce77388c22e465f7a80c3ad0d788321c10c62117369a220fed0cb2de4a33985050a7f9d556f3355dfdf4910f54ab90e7ab70cafb462dbde564271590b36438b
+DIST genpatches-3.15-9.base.tar.xz 181112 SHA256 514dcd1b0901a84fb52e85b7536d14386e2ddca6657338807fddd12ca873beba SHA512 2e9818c38f9d42964fad853c801419026d456d8c21ae74f5c4642f092535bd7b2a244916a991fee7efdb88a3bf92ba1e2cc0568b7eb43982cdbb956e11d18d59 WHIRLPOOL 70d9dd22819b4a5a724684be1729e618bd25a1f6c0644e476c7675c6204b0fe659d73e574b6077428cbe073969acd368fd626cded8c16767adf19f6d88a0f019
+DIST genpatches-3.15-9.extras.tar.xz 17668 SHA256 a77fdc75b074d504884594e2ac0e4754b852731d0e1cadb93d681d560fdebda9 SHA512 d827d929da61f998e8c4182e3eb40b0a7c06e09486fc5c7483e81aebe0b2192ccbdca746b4f5bee7044e9bd889dd9ebe276432eab356b7c71ce34f2e1a762fb9 WHIRLPOOL 52af1c5d5ebf7e2913d060d346e75360c4a4bf332060f1044eb4f57c81fb6d8aeff2bca0e56f7a1a283f6aebce0ab41c92d35665fb61a0ddeb546be3bd463140
 DIST lh-logo_linux_320_240_clut224.ppm 58367 SHA256 9692bfdd2257ae5131ac14eb6f34386416ec228be68a4bb02381378876e34812 SHA512 18cd56961a81f4ca87933859a35d84af86602f480a6b92dbb3c2f4a9b83abb7023c64939bc781bbe7f9e8e105df508698a66790909f9144fb99c1e347ccf22de WHIRLPOOL 66933acfce018d07d9d70dbfd56155bb23f7fdccb2295c28100165d6c8c14194556bdadf66b119f42db1d700d1ce5bf2eeca17f44c26582bb13656d166c055e8
 DIST lh-sources-kernel-8883161b98577bd2397dc8616f8e805fb1861be1.patch 15840 SHA256 8154715b3b3c7ebfb614db64afabeb192692e82c73bacdceaad0dc584a07fb8f SHA512 f0acbc5ca8115dbee77437e69ff7de45756ac3ba50bb895681630f4e4722b8cb1b034a2aded5645aac8ae88cb236f864f2d150fa4dea017ffee45ca1d70b9d8c WHIRLPOOL 40977af61d98f5d31695b6f81438ac08dbd07d51663df4d5a078564cdcc7fc9310d9ce97522c43bf0e631d10d2d8d304eb437700cf44799b7b9496675fc4a59e
 DIST linux-3.15.tar.xz 79676484 SHA256 c3927e87be4040fa8aca1b58663dc0776aaf00485604ff88a623be2f3fb07794 SHA512 d5dc477cad4584e56e2e2ef9e0950c2b22e76e5cf5090a896ba099cb7c5e5db1853a4aeb96b199189653dc66d461557e95198e37516a619f7ddc01ba6b308e02 WHIRLPOOL 7f3dfde1a23aab75b7f40770ae2ca77c1b28f845e4abe6296b2aec9b56fe94f7afa76b00eb6cc7475305c31b726ebeb4643107dd48c12ac04c933cf1856b8e77
