@@ -1,5 +1,10 @@
 
 
+*lh-sources-3.15.7 (30 Jul 2014)
+
+  30 Jul 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.15.7.ebuild:
+  Bump to latest aufs3, genpatches and linux release
+
   27 Jul 2014; Justin Lecher <jlec@gentoo.org> lh-sources-3.15.6.ebuild:
   Bump to latest aufs3
 
